[tool.poetry]
name = "cipher_rl3167"
version = "0.1.0"
description = "A Python package containing cipher function, which is used for encode and decode texts."
authors = ["Ruiqi Li <rl3167@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter_contrib_nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.3.0"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
